[project]
name = "dograh-ctl"
version = "0.1.0"
description = "A CLI to run a self-hosted Dograh voice-agent platform from the terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
dograh-ctl = "dograh_ctl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
